--- a/web3.html
+++ b/web3.html
@@ -213,6 +213,7 @@
         /* Content Card */
         .journey-content {
             background: rgba(255, 255, 255, 0.08);
+            -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
             padding: 25px;
             border-radius: 15px;
