--- a/events.html
+++ b/events.html
@@ -157,6 +157,7 @@
         
         .selection-card {
             background: rgba(255, 255, 255, 0.1);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border-radius: 20px;
             border: 1px solid rgba(255, 255, 255, 0.2);
@@ -258,6 +259,7 @@
             transition: all 0.3s;
             border: 1px solid rgba(255,255,255,0.2);
             font-weight: 600;
+            -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
         }
 
