--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="contact">
         <div class="footer-content">
             <ul class="footer-links">
                 <li><a href="https://www.linkedin.com/in/gopika-chauhan18/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
