--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
                 transform: translateY(0);
             }
 
+            .hero { height: 70vh; min-height: 500px; }
             .hero h1 { font-size: 42px; padding: 0 15px; line-height: 1.2; }
             .hero p { font-size: 18px; padding: 0 20px; }
             
@@ -353,7 +354,7 @@
                 gap: 20px;
             }
             
-            .tile-large, .tile-wide, .tile-tall, .tile-medium, .tile-small { 
+            .tile-hero, .tile-large, .tile-wide, .tile-tall, .tile-medium, .tile-small { 
                 grid-column: span 1; 
                 grid-row: span 1; 
             }
